--- a/BookStorage/Views/Shared/_Footer.cshtml
+++ b/BookStorage/Views/Shared/_Footer.cshtml
@@ -1,4 +1,4 @@
-﻿<footer>
+﻿<footer id="site-footer">
     <div class="ui inverted vertical footer segment">
         <div class="ui center aligned container">
             <div class="ui horizontal small inverted divided link list">
