--- a/BookStorage/Views/Shared/_Header.cshtml
+++ b/BookStorage/Views/Shared/_Header.cshtml
@@ -1,4 +1,4 @@
-﻿<header>    
+﻿<header id="site-header">    
     <div class="ui fixed inverted menu">
         <div class="ui container">
             <a href="" class="header item">
