added authenfication using cookies

--- a/BookStorage/Views/Shared/_Header.cshtml
+++ b/BookStorage/Views/Shared/_Header.cshtml
@@ -3,7 +3,7 @@
         <div class="ui container">
             <a href="" class="header item">
                 <i class="book icon"></i>
-                BookStorage
+                BookSpot
             </a>
             <a href="" class="item">Home</a>
             <div class="ui simple dropdown item">
