--- a/BookStorage/Views/Account/SignInUp.cshtml
+++ b/BookStorage/Views/Account/SignInUp.cshtml
@@ -1,6 +1,8 @@
 ﻿@section Styles
 {
     <link rel="stylesheet" href="~/css/sign-in-up.css" />
+    <link rel="stylesheet" href="~/css/hide-footer.css" />
+    <link rel="stylesheet" href="~/css/hide-header.css" />
 }
 
 @section Scripts
