--- a/BookStorage/wwwroot/css/sign-in-up.css
+++ b/BookStorage/wwwroot/css/sign-in-up.css
@@ -1,12 +1,4 @@
-﻿#site-footer {
-    display: none;
-}
-
-#site-header {
-    display: none;
-}
-
-body {
+﻿body {
     background-color: white;
 }
 
