added book page

--- a/BookStorage/Views/Shared/_Header.cshtml
+++ b/BookStorage/Views/Shared/_Header.cshtml
@@ -16,7 +16,7 @@
                 <i class="book icon"></i>
                 BookSpot
             </a>
-            <a href="" class="item">Home</a>
+            <a href="" class="item">Library</a>
             <div class="ui simple dropdown item">
                 Dropdown
                 <i class="dropdown icon"></i>
