--- a/BookStorage/Views/Shared/_Layout.cshtml
+++ b/BookStorage/Views/Shared/_Layout.cshtml
@@ -18,6 +18,7 @@
     
     <link rel="stylesheet" href="~/css/main.css" />
 
+    <script src="~/js/var-storage.js"></script>
     <script src="~/js/main.js"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
