--- a/BookStorage/Views/Shared/_Layout.cshtml
+++ b/BookStorage/Views/Shared/_Layout.cshtml
@@ -15,6 +15,8 @@
 
     <script src="https://unpkg.com/vue@2.7.14/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.address/1.6/jquery.address.min.js" integrity="sha256-mLCPYHfNREhSETFQGuowilY3zBAZGnDO2cxCnCEm8/I=" crossorigin="anonymous"></script>
+
     
     <link rel="stylesheet" href="~/css/main.css" />
 
