added book cover container

--- a/BookStorage/Views/Book/Book.cshtml
+++ b/BookStorage/Views/Book/Book.cshtml
@@ -47,7 +47,10 @@
                     </div>
                     <div class="two wide column"></div>
                     <div class="six wide column">
-                        <input type="file" id="cover" class="ui invisible file input">
+                        <div class="field">
+                            
+                        </div>
+                        <input type="file" name="bookCoverImage" id="cover" class="ui invisible file input">
                         <label for="cover" class="ui placeholder segment">
                             <div class="ui icon header">
                                 <i class="upload icon"></i>
