--- a/BookStorage/Views/Book/Book.cshtml
+++ b/BookStorage/Views/Book/Book.cshtml
@@ -47,7 +47,12 @@
                     </div>
                     <div class="two wide column"></div>
                     <div class="six wide column">
-                        <div class="field">
+                        <input type="file" 
+                               id="filepond"
+                               class="filepond"
+                               name="filepond"
+                               accept="image/png, image/jpeg, image/gif" />
+                        @*  <div class="field">
                             
                         </div>
                         <input type="file" name="bookCoverImage" id="cover" class="ui invisible file input">
@@ -56,7 +61,7 @@
                                 <i class="upload icon"></i>
                                 Click here to upload cover
                             </div>
-                        </label>
+                        </label> *@
                     </div>
                 </div>
                 <div class="ui error message"></div>
