--- a/BookStorage/wwwroot/css/main.css
+++ b/BookStorage/wwwroot/css/main.css
@@ -7,6 +7,17 @@ body {
     background-color: #EEF3FB;
 }
 
+.actions-container .actions {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .m-top-15 {
     margin-top: 15px !important;
+}
+
+.m-zero {
+    margin: 0 !important;
 }
