spelling mistake fix

--- a/BookStorage/Views/Book/BookView.cshtml
+++ b/BookStorage/Views/Book/BookView.cshtml
@@ -83,7 +83,7 @@
                 else
                 {
                     <div class="ui blue segment">
-                        <h3 class="ui centered header">Ts
+                        <h3 class="ui centered header">
                             Authorize to write a comment
                         </h3>
                     </div>
