added css variables for header and footer

--- a/BookStorage/Views/Shared/_Footer.cshtml
+++ b/BookStorage/Views/Shared/_Footer.cshtml
@@ -1,5 +1,5 @@
-﻿<footer id="site-footer">
-    <div class="ui inverted vertical footer segment">
+﻿<footer>
+    <div id="site-footer" class="ui inverted vertical footer segment">
         <div class="ui center aligned container">
             <div class="ui horizontal small inverted divided link list">
                 <a href="#" class="item">Site Map</a>
