--- a/BookStorage/Views/Shared/_Header.cshtml
+++ b/BookStorage/Views/Shared/_Header.cshtml
@@ -9,8 +9,8 @@
     IUserContextService userContextService = Context.GetService<IUserContextService>();
 }
 
-<header id="site-header">    
-    <div class="ui fixed inverted menu">
+<header >    
+    <div id="site-header"  class="ui fixed inverted menu">
         <div class="ui container">
             <a href="/" class="header item">
                 <i class="book icon"></i>
