--- a/BookStorage/Views/Shared/_Layout.cshtml
+++ b/BookStorage/Views/Shared/_Layout.cshtml
@@ -39,6 +39,7 @@
     <script src="https://unpkg.com/jquery-filepond/filepond.jquery.js"></script>
     
     <link rel="stylesheet" href="~/css/main.css" />
+    <link rel="stylesheet" href="~/css/vars.css" />
 
     <script src="~/js/var-storage.js"></script>
     <script src="~/js/main.js"></script>
