updated Read btn on book view

--- a/BookStorage/Views/Book/BookView.cshtml
+++ b/BookStorage/Views/Book/BookView.cshtml
@@ -46,7 +46,8 @@
                         <div class="ui fluid rounded image">
                             <img src="/images/book/book-img.jpg" alt="" />
                         </div>
-                        <div class="ui fluid positive button m-top-15">Read</div>
+                        <a href="/book/@Model.BookId/chapter/@chapters.First().ChapterId/view" 
+                           class="ui fluid positive button m-top-15">Read</a>
                     </div>
                     <div class="ten wide column">
                         <h1 class="ui dividing header">
