added first version of user profile page

--- a/BookStorage/Views/Shared/_Header.cshtml
+++ b/BookStorage/Views/Shared/_Header.cshtml
@@ -53,7 +53,8 @@
                                 <div class="item">
                                     <i class="user secondary icon" style="visibility: visible;"></i>
                                     <div class="content">
-                                        <a class="header">Account</a>
+                                        <a href="@Url.Action("UserProfileView", "User")"
+                                            class="header">Profile</a>
                                     </div>
                                 </div>
                                 <div class="item">
